# alphasense

./: .gitignore  Pipfile  pyproject.toml  requirements.txt  setup.cfg
AlphafoldModel/: AlphafoldModel.py  ModelPDB.py  __init__.py
AlphafoldModel/test_files/: AF-H0YBT0-F1-predicted_aligned_error_v4.json
AlphafoldScript/: checkjson.sh  get_AFmodel_metrics.py
AlphafoldScript/test_files/: variants_test.csv
alphasense/: AlphafoldModel.py  LoadedKDTree.py  ModelPAE.py  ModelPDB.py
analysis/: analyze_vep_output.py  cluster_variants.py  filter_vep_output.py  get_HGVS.py  get_short_proteins.py  group_humsavar.py  humsavar_reviewed_proteins.py  humsavar_to_tsv.py  stitch_protein_lengths.py
analysis/pickleconfig/: __init__.py
bash_utils/: bootstrap_lines.sh  sample_lines.sh
jupyter/: filter_uniprot_data.ipynb  randomScripts.py  remove_duplicates.ipynb  testVenv.py  train_test_split.ipynb  variants_cluster_analysis.ipynb  vep_output_explore.ipynb  vep_troubleshoot.ipynb
root_path/: path.py
synced_files/: vep_100000_analysis_summary.txt  vep_rsID_sample_200.csv_summary.html  vep_rsID_sample_400.csv_summary.html  vep_sample_HGVS_small.csv
synced_files/all_variants/: all_variants_nr.csv  humsavar_reviewed_only.ipynb  merge_variants.ipynb
synced_files/m3d_variants_input/: humsavar_benign_testing.csv  (+11 more)
test_files/: sample_uniprot_variants.txt
utils/: analyze_vep_output.py  filterUniprot.py  fragment_file.py  get_HGVS-uniprot.py  get_HGVS.py  get_pathogenic_only.py  get_rsID.py  stitch_protein_lengths.py  utilities.py  vep_output_discrepancy.py
(+33 files in other folders)
