[metadata]
name = alphasense
version = 0.0.1
author = Elbert Timothy
author_email = ignatiuselbert5@gmail.com
description = Alphafold model prediction confidence flagging pipeline for Missense3D.
long_description = file: README.md
long_description_content_type = text/markdown
url = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True